MORE-700 improve error handling for limes autocomplete